# bb_bot

./: .dockerignore  .flake8  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  activate.ps1  docker-compose.dev.yml  docker-compose.yml  env.example  full_ocr.txt  output.txt  pyproject.toml  repro_issue.py  test_ocr.py
.github/workflows/: docker-publish.yml  pr-validation.yml
config/: grid.yaml  shifts.yaml
scripts/: auth_setup.py  docker-dev.ps1  export_events_shift_groups.py  test_ocr.py  wipe_calendar.py
src/: __init__.py  auth_setup.py  config.py  constants.py  dev.py  main.py  version.py
src/bot/: commands.py  handlers.py  reminder_job.py  replies.py
src/services/: calendar_service.py  image_processor.py  medication_stats.py  reminder_service.py
tests/: ground_truth.yaml  test_image_processor.py  test_medication_stats.py  test_ocr_accuracy.py  test_reminder_job.py  test_reminder_service.py
